--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -102,63 +102,8 @@ h3 {
   position: relative;
 }
 
-.slick-slide {
-  transform: skew(15deg);
-
-  > div {
-    display: flex;
-  }
-
-  &:last-child {
-    .slideproto {
-      width: 600px;
-
-      .textslidebox {
-        text-align: left;
-        box-sizing: border-box;
-        padding-left: 12%;
-      }
-    }
-  }
-
-  &:first-child {
-    .slideproto {
-      width: 800px;
-      left: -31%;
-
-      .imagerectbox {
-        width: 928px;
-      }
-
-      .logofirstbox {
-        box-sizing: border-box;
-        padding-left: 17%;
-      }
-    }
-  }
-
-  // &:last-child {
-  //   .slideproto {
-  //     .textslidebox {
-  //       // margin-left: 3%;
-  //     }
-  //   }
-  // }
-  &:first-child {
-    .slideproto {
-      width: 800px;
-      left: -31%;
-
-      .imagerectbox {
-        width: 928px;
-      }
-
-      .logofirstbox {
-        box-sizing: border-box;
-        padding-left: 17%;
-      }
-    }
-  }
+.titlesection {
+  margin: 0 0 60px 0;
 }
 
 .slideproto {
@@ -184,85 +129,37 @@ h3 {
   }
 }
 
-.slidermainproto {
-  .slick-slide {
-    &:first-child {
-      .slideproto {
-        &::after {
-          display: none;
-        }
-      }
-    }
+.cftextsection5text {
+  .titlesection {
+    margin-bottom: 40px;
+    font-weight: 500;
+    font-size: 50px;
+    line-height: 61px;
+    text-align: center;
+    color: #19338b;
+  }
+}
 
-    &:nth-child(2) {
-      .imagerectbox {
-        &::after {
-          background:
-            radial-gradient(
-              53.13% 50% at 53.13% 50%,
-              #fff 0%,
-              rgba(188, 197, 255, 0.4) 100%
-            );
-        }
-      }
-    }
+.cftextsection5 {
+  background: #d0e2fe;
 
-    &:nth-child(3) {
-      .imagerectbox {
-        &::after {
-          background:
-            linear-gradient(
-              160.21deg,
-              rgba(226, 246, 255, 0.42) 5.46%,
-              rgba(140, 179, 196, 0) 94.03%
-            ),
-            linear-gradient(
-              152.89deg,
-              rgba(255, 233, 214, 0.6) -8.08%,
-              rgba(255, 245, 235, 0.4) 93.66%
-            );
-        }
-      }
-    }
-
-    &:nth-child(4) {
-      .imagerectbox {
-        &::after {
-          background:
-            radial-gradient(
-              111.11% 107.5% at 46.8% 102.95%,
-              #08e 0%,
-              rgba(124, 142, 255, 0) 100%
-            );
-        }
-      }
-    }
-
-    &:nth-child(5) {
-      .imagerectbox {
-        &::after {
-          background:
-            linear-gradient(
-              194.89deg,
-              #418bc0 2.13%,
-              rgba(61, 119, 162, 0) 98.38%
-            ),
-            radial-gradient(
-              149.97% 107.5% at 28.19% 102.95%,
-              #64ccc0 0%,
-              rgba(0, 32, 234, 0) 61.46%
-            );
-        }
-      }
-    }
-
-    &:last-child {
-      .slidename {
-        padding-left: 7%;
-      }
-    }
+  a {
+    text-decoration: none;
   }
 
+  .cftextsection5text {
+    text-align: center;
+    font-size: 20px;
+    line-height: 24px;
+    color: #19338b;
+
+    p {
+      margin: 0;
+    }
+  }
+}
+
+.slidermainproto {
   .slick-dots {
     position: absolute;
     left: 0;
@@ -306,8 +203,106 @@ h3 {
   }
 }
 
+.btnsectiontext {
+  text-align: center;
+  margin-top: 90px;
+  font-size: 18px;
+
+  a {
+    margin-top: 16px;
+  }
+}
+
+.legaltext {
+  white-space: pre-line;
+  margin-top: 30px;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.legalsection {
+  margin-top: 70px;
+
+  &:first-child {
+    .legaltext {
+      max-width: 461px;
+      margin-top: 50px;
+      font-size: 16px;
+      line-height: 20px;
+    }
+  }
+
+  a {
+    color: #18338b;
+  }
+}
+
+.exploreprojectsgrid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 50px 40px;
+  margin-top: 80px;
+
+  .projectcol {
+    background:
+      linear-gradient(180deg, #fff 0%, rgba(255, 255, 255, 0.5) 100%),
+      #d0e2fe;
+    box-shadow: 0 55px 60px rgba(24, 51, 139, 0.12);
+    border-radius: 40px;
+    min-height: 340px;
+    padding: 60px 30px 60px 40px;
+    box-sizing: border-box;
+
+    ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+
+      a {
+        text-decoration: none;
+      }
+
+      li {
+        padding: 7px 0 7px 20px;
+        background-image: url(../img/icons/arrow-right.svg);
+        background-repeat: no-repeat;
+        background-position: left center;
+        font-weight: normal;
+        font-size: 16px;
+        color: #18338b;
+      }
+    }
+  }
+
+  .projectcolname {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 49px;
+    color: #18338b;
+    margin-bottom: 30px;
+  }
+}
+
+.networkinvest {
+  padding: 100px 0;
+  background-color: #d0e2fe;
+
+  h2 {
+    color: #18338b;
+  }
+
+  .exploreprojectsgrid {
+    margin-top: 50px;
+  }
+
+  .projectcolname {
+    font-size: 30px;
+    line-height: 37px;
+    color: #18338b;
+  }
+}
+
 .imagerectbox {
-  position: relative;
   background-repeat: no-repeat;
   background-size: cover;
   transform: skew(-15deg);
@@ -330,6 +325,44 @@ h3 {
         rgba(124, 142, 255, 0) 100%
       );
     transform: matrix(-1, 0, 0, 1, 0, 0);
+  }
+}
+
+.busbtn {
+  position: relative;
+  display: inline-block;
+  height: 62px;
+  width: 260px;
+  background-color: rgba(24, 51, 139, 1);
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 62px;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #fff;
+  background-image: url(../img/icons/arrow-right-white.svg);
+  background-position: center right 20px;
+  background-repeat: no-repeat;
+  overflow: hidden;
+
+  &::after {
+    position: absolute;
+    content: "";
+    left: 97%;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.5);
+    transition: all 0.3s;
+  }
+
+  &:hover {
+    &::after {
+      left: 0;
+      top: 0;
+      transition: all 0.3s;
+    }
   }
 }
 
@@ -386,10 +419,6 @@ h3 {
   background-position: center right;
 }
 
-.titlesection {
-  margin: 0 0 60px 0;
-}
-
 .businesgrid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -412,6 +441,16 @@ h3 {
   flex-direction: column;
 }
 
+.specmaincover {
+  display: inline-block;
+  background: #18338b1f;
+  padding: 5px;
+  box-shadow: 0 55px 60px rgba(24, 51, 139, 0.2);
+  border-radius: 40px;
+  transform: translateY(0);
+  transition: all 0.3s;
+}
+
 .busineitemimg {
   margin-bottom: 35px;
 
@@ -432,16 +471,6 @@ h3 {
       transition: all 0.3s;
     }
   }
-}
-
-.specmaincover {
-  display: inline-block;
-  background: #18338b1f;
-  padding: 5px;
-  box-shadow: 0 55px 60px rgba(24, 51, 139, 0.2);
-  border-radius: 40px;
-  transform: translateY(0);
-  transition: all 0.3s;
 }
 
 .speccover {
@@ -471,44 +500,6 @@ h3 {
 
 .busbtwrapp {
   margin-top: auto;
-}
-
-.busbtn {
-  position: relative;
-  display: inline-block;
-  height: 62px;
-  width: 260px;
-  background-color: rgba(24, 51, 139, 1);
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 62px;
-  text-align: center;
-  text-transform: uppercase;
-  text-decoration: none;
-  color: #fff;
-  background-image: url(../img/icons/arrow-right-white.svg);
-  background-position: center right 20px;
-  background-repeat: no-repeat;
-  overflow: hidden;
-
-  &::after {
-    position: absolute;
-    content: "";
-    left: 97%;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(255, 255, 255, 0.5);
-    transition: all 0.3s;
-  }
-
-  &:hover {
-    &::after {
-      left: 0;
-      top: 0;
-      transition: all 0.3s;
-    }
-  }
 }
 
 .busbtn--hide {
@@ -680,83 +671,6 @@ h3 {
   }
 }
 
-.cftextsection5 {
-  background: #d0e2fe;
-
-  a {
-    text-decoration: none;
-  }
-
-  .cftextsection5text {
-    text-align: center;
-    font-size: 20px;
-    line-height: 24px;
-    text-align: center;
-    color: #19338b;
-
-    p {
-      margin: 0;
-    }
-  }
-}
-
-.cftextsection5text {
-  .titlesection {
-    margin-bottom: 40px;
-    font-weight: 500;
-    font-size: 50px;
-    line-height: 61px;
-    text-align: center;
-    color: #19338b;
-  }
-}
-
-.exploreprojectsgrid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 50px 40px;
-  margin-top: 80px;
-
-  .projectcol {
-    background:
-      linear-gradient(180deg, #fff 0%, rgba(255, 255, 255, 0.5) 100%),
-      #d0e2fe;
-    box-shadow: 0 55px 60px rgba(24, 51, 139, 0.12);
-    border-radius: 40px;
-    min-height: 340px;
-    padding: 60px 30px 60px 40px;
-    box-sizing: border-box;
-
-    ul {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-
-      a {
-        text-decoration: none;
-      }
-
-      li {
-        padding: 7px 0 7px 20px;
-        background-image: url(../img/icons/arrow-right.svg);
-        background-repeat: no-repeat;
-        background-position: left center;
-        font-weight: normal;
-        font-size: 16px;
-        color: #18338b;
-      }
-    }
-  }
-
-  .projectcolname {
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 49px;
-    color: #18338b;
-    margin-bottom: 30px;
-  }
-}
-
 .advsection1 {
   background: #e2edfe;
   background-position: center right;
@@ -818,16 +732,6 @@ h3 {
   grid-gap: 70px 90px;
 }
 
-.teamcal {
-  .teamphoto {
-    background: #eaebed;
-  }
-
-  .temcaltext {
-    margin-top: 20px;
-  }
-}
-
 .teamphoto {
   img {
     max-width: 100%;
@@ -852,21 +756,21 @@ h3 {
   }
 }
 
+.teamcal {
+  .teamphoto {
+    background: #eaebed;
+  }
+
+  .temcaltext {
+    margin-top: 20px;
+  }
+}
+
 .advsection4 {
   background: #d0e2fe;
 
   .titlesection {
     color: rgba(24, 51, 139, 1);
-  }
-}
-
-.btnsectiontext {
-  text-align: center;
-  margin-top: 90px;
-  font-size: 18px;
-
-  a {
-    margin-top: 16px;
   }
 }
 
@@ -1004,44 +908,8 @@ h3 {
   }
 }
 
-.networkinvest {
-  padding: 100px 0;
-  background-color: #d0e2fe;
-
-  h2 {
-    color: #18338b;
-  }
-
-  .exploreprojectsgrid {
-    margin-top: 50px;
-  }
-
-  .projectcolname {
-    font-size: 30px;
-    line-height: 37px;
-    color: #18338b;
-  }
-}
-
 .legalsite {
   margin-bottom: 90px;
-}
-
-.legalsection {
-  margin-top: 70px;
-
-  &:first-child {
-    .legaltext {
-      max-width: 461px;
-      margin-top: 50px;
-      font-size: 16px;
-      line-height: 20px;
-    }
-  }
-
-  a {
-    color: #18338b;
-  }
 }
 
 .legaltitle {
@@ -1051,17 +919,118 @@ h3 {
   color: #18338b;
 }
 
-.legaltext {
-  white-space: pre-line;
-  margin-top: 30px;
-  font-size: 20px;
-  line-height: 24px;
-}
-
 .legalhighlited {
   color: #18338b;
 }
 
 .bold {
   font-weight: bold;
+}
+
+// slide
+
+.slick-slide {
+  transform: skew(15deg);
+
+  > div {
+    display: flex;
+  }
+
+  &:nth-child(2) {
+    .imagerectbox {
+      &::after {
+        background:
+          radial-gradient(
+            53.13% 50% at 53.13% 50%,
+            #fff 0%,
+            rgba(188, 197, 255, 0.4) 100%
+          );
+      }
+    }
+  }
+
+  &:nth-child(3) {
+    .imagerectbox {
+      &::after {
+        background:
+          linear-gradient(
+            160.21deg,
+            rgba(226, 246, 255, 0.42) 5.46%,
+            rgba(140, 179, 196, 0) 94.03%
+          ),
+          linear-gradient(
+            152.89deg,
+            rgba(255, 233, 214, 0.6) -8.08%,
+            rgba(255, 245, 235, 0.4) 93.66%
+          );
+      }
+    }
+  }
+
+  &:nth-child(4) {
+    .imagerectbox {
+      &::after {
+        background:
+          radial-gradient(
+            111.11% 107.5% at 46.8% 102.95%,
+            #08e 0%,
+            rgba(124, 142, 255, 0) 100%
+          );
+      }
+    }
+  }
+
+  &:nth-child(5) {
+    .imagerectbox {
+      &::after {
+        background:
+          linear-gradient(
+            194.89deg,
+            #418bc0 2.13%,
+            rgba(61, 119, 162, 0) 98.38%
+          ),
+          radial-gradient(
+            149.97% 107.5% at 28.19% 102.95%,
+            #64ccc0 0%,
+            rgba(0, 32, 234, 0) 61.46%
+          );
+      }
+    }
+  }
+
+  &:first-child {
+    .slideproto {
+      width: 800px;
+      left: -31%;
+
+      .imagerectbox {
+        width: 928px;
+      }
+
+      .logofirstbox {
+        box-sizing: border-box;
+        padding-left: 17%;
+      }
+
+      &::after {
+        display: none;
+      }
+    }
+  }
+
+  &:last-child {
+    .slideproto {
+      width: 600px;
+
+      .textslidebox {
+        text-align: left;
+        box-sizing: border-box;
+        padding-left: 12%;
+      }
+    }
+
+    .slidename {
+      padding-left: 7%;
+    }
+  }
 }
