--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,3 +5,4 @@
 @import "common/icons";
 @import "common/response";
 @import "../../node_modules/slick-carousel/slick/slick.scss";
+@import "../../node_modules/intl-tel-input/build/css/intlTelInput.css";
