--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -1026,7 +1026,130 @@ h3 {
   }
 }
 
+// page style & container
+
+.page {
+  &-container {
+    max-width: 1110px;
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  &-head-bg {
+    height: 250px;
+    width: 100%;
+    margin-top: -25px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  &-title {
+    color: #fff;
+    font-size: 50px;
+    font-weight: 500;
+  }
+}
+
 // contacts page
+
+.contact {
+  &-page {
+    display: grid;
+    grid-template-columns: minmax(320px, 450px) minmax(320px, 400px);
+    justify-content: space-between;
+    grid-gap: 15px;
+    padding: 80px 15px;
+
+    @include b(700) {
+      grid-template-columns: 1fr;
+      grid-gap: 50px;
+    }
+  }
+
+  &-block {
+    &-text {
+      font-size: 20px;
+      line-height: 2;
+      color: #000;
+
+      @include b(850) {
+        font-size: 15px;
+      }
+    }
+
+    &-form {
+      display: flex;
+      flex-direction: column;
+
+      &-field {
+        border-radius: 10px;
+        border: 2px solid rgba(16, 52, 166, 0.25);
+        border-radius: 4px;
+        margin-bottom: 15px;
+        min-height: 60px;
+      }
+
+      .icon {
+        display: grid;
+        grid-template-columns: 50px 1fr;
+
+        &:before {
+          width: 100%;
+          height: 100%;
+          background-position: center;
+        }
+      }
+
+      input {
+        border: none;
+        height: 60px;
+      }
+
+      input,
+      textarea {
+        color: #404040;
+        font-size: 14px;
+        font-family: Montserrat, sans-serif;
+        padding: 10px;
+        width: 100%;
+        outline: none;
+        max-width: 100%;
+        resize: vertical;
+      }
+
+      button {
+        outline: none;
+        border: none;
+        margin-top: 10px;
+      }
+
+      &-title {
+        font-weight: bold;
+        color: #000;
+        margin-bottom: 10px;
+      }
+    }
+  }
+}
+
+.iti {
+  width: 100%;
+}
+
+.iti__flag {
+  background-image: url("../img/contacts/flags.png");
+}
+
+// @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+//   .iti__flag {
+//     background-image: url("../img/contacts/flags@2x.png");
+//   }
+// }
 
 // 404 page
 
