upd: fix styles

--- a/src/pages/contacts.pug
+++ b/src/pages/contacts.pug
@@ -35,7 +35,7 @@ block content
           .contact-block-form-field.icon.icon-email
             input(type="email", name="email", placeholder="Your email", required)
           textarea.contact-block-form-field(name="message", cols="30", rows="7", placeholder="Your message", required)
-          button.busbtn.error-page-btn(type="submit") ENQUIRY
+          button.busbtn.contact-page-btn(type="submit") ENQUIRY
 
 block footer
   include common/footer
