--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -120,11 +120,12 @@ h3 {
     height: 100%;
     mix-blend-mode: normal;
     box-shadow: 0 12px 20px rgba(0, 0, 0, 0.5);
-    background: radial-gradient(
-      52.31% 50% at 52.31% 50%,
-      #fff 0%,
-      rgba(188, 197, 255, 0.5) 100%
-    );
+    background:
+      radial-gradient(
+        52.31% 50% at 52.31% 50%,
+        #fff 0%,
+        rgba(188, 197, 255, 0.5) 100%
+      );
   }
 }
 
@@ -243,7 +244,8 @@ h3 {
   margin-top: 80px;
 
   .projectcol {
-    background: linear-gradient(180deg, #fff 0%, rgba(255, 255, 255, 0.5) 100%),
+    background:
+      linear-gradient(180deg, #fff 0%, rgba(255, 255, 255, 0.5) 100%),
       #d0e2fe;
     box-shadow: 0 55px 60px rgba(24, 51, 139, 0.12);
     border-radius: 40px;
@@ -316,11 +318,12 @@ h3 {
     top: 0;
     width: 100%;
     height: 100%;
-    background: radial-gradient(
-      111.11% 107.5% at 46.8% 102.95%,
-      #08e 0%,
-      rgba(124, 142, 255, 0) 100%
-    );
+    background:
+      radial-gradient(
+        111.11% 107.5% at 46.8% 102.95%,
+        #08e 0%,
+        rgba(124, 142, 255, 0) 100%
+      );
     transform: matrix(-1, 0, 0, 1, 0, 0);
   }
 }
@@ -614,7 +617,8 @@ h3 {
     height: 185px;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(180deg, #fff 0%, rgba(255, 255, 255, 0) 100%),
+    background:
+      linear-gradient(180deg, #fff 0%, rgba(255, 255, 255, 0) 100%),
       #d0e2fe;
     box-shadow: 0 55px 60px rgba(24, 51, 139, 0.12);
     transform: translateY(0);
@@ -776,7 +780,8 @@ h3 {
   grid-gap: 35px 35px;
 
   .projctcol {
-    background: linear-gradient(180deg, #fff 0%, rgba(255, 255, 255, 0.5) 100%),
+    background:
+      linear-gradient(180deg, #fff 0%, rgba(255, 255, 255, 0.5) 100%),
       #d0e2fe;
     box-shadow: 0 55px 60px rgba(24, 51, 139, 0.12);
     border-radius: 40px;
@@ -934,11 +939,12 @@ h3 {
   &:nth-child(2) {
     .imagerectbox {
       &::after {
-        background: radial-gradient(
-          53.13% 50% at 53.13% 50%,
-          #fff 0%,
-          rgba(188, 197, 255, 0.4) 100%
-        );
+        background:
+          radial-gradient(
+            53.13% 50% at 53.13% 50%,
+            #fff 0%,
+            rgba(188, 197, 255, 0.4) 100%
+          );
       }
     }
   }
@@ -946,7 +952,8 @@ h3 {
   &:nth-child(3) {
     .imagerectbox {
       &::after {
-        background: linear-gradient(
+        background:
+          linear-gradient(
             160.21deg,
             rgba(226, 246, 255, 0.42) 5.46%,
             rgba(140, 179, 196, 0) 94.03%
@@ -963,11 +970,12 @@ h3 {
   &:nth-child(4) {
     .imagerectbox {
       &::after {
-        background: radial-gradient(
-          111.11% 107.5% at 46.8% 102.95%,
-          #08e 0%,
-          rgba(124, 142, 255, 0) 100%
-        );
+        background:
+          radial-gradient(
+            111.11% 107.5% at 46.8% 102.95%,
+            #08e 0%,
+            rgba(124, 142, 255, 0) 100%
+          );
       }
     }
   }
@@ -975,7 +983,8 @@ h3 {
   &:nth-child(5) {
     .imagerectbox {
       &::after {
-        background: linear-gradient(
+        background:
+          linear-gradient(
             194.89deg,
             #418bc0 2.13%,
             rgba(61, 119, 162, 0) 98.38%
@@ -1069,6 +1078,12 @@ h3 {
       grid-template-columns: 1fr;
       grid-gap: 50px;
     }
+
+    &-btn {
+      outline: none;
+      border: none;
+      margin-top: 10px;
+    }
   }
 
   &-block {
@@ -1087,7 +1102,6 @@ h3 {
       flex-direction: column;
 
       &-field {
-        border-radius: 10px;
         border: 2px solid rgba(16, 52, 166, 0.25);
         border-radius: 4px;
         margin-bottom: 15px;
@@ -1098,7 +1112,7 @@ h3 {
         display: grid;
         grid-template-columns: 50px 1fr;
 
-        &:before {
+        &::before {
           width: 100%;
           height: 100%;
           background-position: center;
@@ -1120,12 +1134,6 @@ h3 {
         outline: none;
         max-width: 100%;
         resize: vertical;
-      }
-
-      button {
-        outline: none;
-        border: none;
-        margin-top: 10px;
       }
 
       &-title {
