--- a/src/styles/mixins/main.scss
+++ b/src/styles/mixins/main.scss
@@ -1,4 +1,4 @@
-@import '../utils/variables';
+@import "../utils/variables";
 
 @mixin rem($size) {
   font-size: ($size/16) + rem;
@@ -15,21 +15,22 @@
     font-family: $font-family;
     font-weight: $weight;
     font-style: $style;
+    font-display: swap;
 
     @if $asset-pipeline==true {
-      src: font-url('#{$file-path}.eot');
+      src: font-url("#{$file-path}.eot");
       src:
-        font-url('#{$file-path}.eot?#iefix') format('embedded-opentype'),
-        font-url('#{$file-path}.woff') format('woff'),
-        font-url('#{$file-path}.ttf') format('truetype');
+        font-url("#{$file-path}.eot?#iefix") format("embedded-opentype"),
+        font-url("#{$file-path}.woff") format("woff"),
+        font-url("#{$file-path}.ttf") format("truetype");
     }
 
     @else {
-      src: url('#{$file-path}.eot');
+      src: url("#{$file-path}.eot");
       src:
-        url('#{$file-path}.eot?#iefix') format('embedded-opentype'),
-        url('#{$file-path}.woff') format('woff'),
-        url('#{$file-path}.ttf') format('truetype');
+        url("#{$file-path}.eot?#iefix") format("embedded-opentype"),
+        url("#{$file-path}.woff") format("woff"),
+        url("#{$file-path}.ttf") format("truetype");
     }
   }
 }
