upd: slides infine & 500ms, fix crf page image

--- a/src/pages/crowdfunding.pug
+++ b/src/pages/crowdfunding.pug
@@ -39,7 +39,7 @@ block content
               | to connect people to high-value projects that are
               | traditionally just open to a select few.
 
-  .cftextsection2.padding80(style='background-image: url(img/crowdfunding/lease.png)')
+  .cftextsection2.padding80
     .wrapper
       .gridsection1
         .gridcol1
