--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -580,6 +580,7 @@ h3 {
   background-position: center right;
   background-repeat: no-repeat;
   background-color: #2c469a;
+  background-image: url(../img/crowdfunding/lease.png);
   color: #fff;
 
   .gridcoltext {
